reverted task creation and two clients generated
